# viam-cpp-sdk

./: .gitignore  CMakeLists.txt  SConscript  SConstruct
etc/docker/: Dockerfile.ubuntu.focal.jetpack
examples/dial/: CMakeLists.txt  example_dial.cc
examples/echo/: CMakeLists.txt
examples/modules/: example_module.cpp
site_scons/site_tools/: homebrew.py  postdefault.py  predefault.py
src/: CMakeLists.txt  SConscript  buf.gen.yaml.in
src/module/: service.cpp
src/rpc/: dial.cpp
src/viam/: SConscript
src/viam/api/: SConscript
src/viam/examples/: SConscript
src/viam/examples/modules/: CMakeLists.txt  example_mlmodelservice_triton.cpp  example_mlmodelservice_triton_server.cpp  example_mlmodelservice_triton_shim.cpp  fake_mlmodelservice_triton.cpp  fake_mlmodelservice_triton_lib.cpp  vtriton.hpp
src/viam/examples/motor/: SConscript
src/viam/sdk/: SConscript
src/viam/sdk/services/mlmodel/: client.cpp
src/viam/sdk/tests/: test_types.cpp
